Fix alignment on pages

--- a/source/stylesheets/components/_entry.scss
+++ b/source/stylesheets/components/_entry.scss
@@ -254,22 +254,28 @@
 
 .entry--full.entry--article {
   .entry__hed {
-    @supports (text-box-edge: cap) and (text-box-trim: trim-both) {
-      margin: 0;
+    margin: 0;
 
+    @supports (text-box-edge: cap) and (text-box-trim: trim-both) {
       @media (min-width: #{$bp-medium}) {
         margin: 1rem;
       }
     }
 
     @supports not ((text-box-edge: cap) or (text-box-trim: trim-both)) {
-      margin: 0;
       padding: 1rem 0;
 
       @media (min-width: #{$bp-medium}) {
-        margin-top: 0;
         padding-top: 0;
       }
+    }
+  }
+}
+
+.entry--full.entry--page {
+  .entry__hed {
+    @supports (text-box-edge: cap) and (text-box-trim: trim-both) {
+      margin-bottom: -1rem;
     }
   }
 }
